Fix footer text alignment.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1173,18 +1173,33 @@ pre code {
 }
 
 .main-footer .footer-text {
-  text-align: center;
   color: #311e3e;
   font-size: 16px;
 }
 
+.main-footer .footer-text p {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 200px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .main-footer .copyleft {
   font: 18px Arial, sans-serif;
-  display: inline-block;
+  display: block;
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
-  padding-bottom: 2px;
 }
 
 /* = = = = = = = = = = Post-Page Styles = = = = = = = = = = */
