--- a/assets/css/sass/parts/_footer.scss
+++ b/assets/css/sass/parts/_footer.scss
@@ -3,14 +3,19 @@
   background-color: #efefef;
 
   .footer-text {
-    text-align: center;
     color: $dark-purple;
     font-size: 16px;
+    p {
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      max-width: 200px;
+      align-items: center;
+    }
   }
   .copyleft {
     font: 18px Arial, sans-serif;
-    display: inline-block;
+    display: block;
     transform: rotate(180deg);
-    padding-bottom: 2px;
   }
 }
